--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,4 @@ itertools = "0.14.0"
 csv = "1.3.1"
 serde = { version = "1.0", features = ["derive"] }
 aberth = "0.4.1"
-arrayvec = "0.7.6"
+hifitime = { version = "4.0.2", features = ["ut1"] }
