--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,9 @@ nalgebra = "0.33.2"
 reqwest = { version = "0.12", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 regex = "1.11.1"
-julian_day_converter = "0.4.4"
-chrono = "0.4.39"
 itertools = "0.14.0"
 csv = "1.3.1"
 serde = { version = "1.0", features = ["derive"] }
 aberth = "0.4.1"
 hifitime = { version = "4.0.2", features = ["ut1"] }
+once_cell = "1.20.3"
