--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ csv = "1.3.1"
 serde = { version = "1.0", features = ["derive"] }
 aberth = "0.4.1"
 hifitime = { version = "4.0.2", features = ["ut1"] }
+once_cell = "1.21.1"
