--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,13 @@ serde_with = "3.12.0"
 thiserror = "2.0.12"
 parquet = "54.2.1"
 arrow = "54.3.0"
+
+[dev-dependencies]
+criterion = "0.5.1"
+
+[[bench]]
+name = "load_parquet"
+harness = false
+
+[profile.release]
+debug = true
