--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ serde_with = "3.12.0"
 thiserror = "2.0.12"
 parquet = "54.2.1"
 arrow = "54.3.0"
+ahash = "0.8.11"
+smallvec = "1.14.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
@@ -28,4 +30,4 @@ name = "load_parquet"
 harness = false
 
 [profile.release]
-debug = true
+# debug = true
