--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ parquet = "54.2.1"
 arrow = "54.3.0"
 ahash = "0.8.11"
 smallvec = "1.14.0"
+ordered-float = "5.0.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
@@ -30,4 +31,4 @@ name = "load_parquet"
 harness = false
 
 [profile.release]
-# debug = true
+debug = true
