--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,24 +4,23 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-nalgebra = "0.33.2"
-reqwest = { version = "0.12", features = ["json"] }
-tokio = { version = "1", features = ["full"] }
-regex = "1.11.1"
-itertools = "0.14.0"
-csv = "1.3.1"
-serde = { version = "1.0", features = ["derive"] }
 aberth = "0.4.1"
-hifitime = { version = "4.0.2", features = ["ut1"] }
-once_cell = "1.21.1"
-camino = "1.1.9"
-serde_with = "3.12.0"
-thiserror = "2.0.12"
-parquet = "54.2.1"
-arrow = "54.3.0"
 ahash = "0.8.11"
-smallvec = "1.14.0"
+arrow = "54.3.0"
+camino = "1.1.9"
+csv = "1.3.1"
+hifitime = { version = "4.0.2", features = ["ut1"] }
+itertools = "0.14.0"
+nalgebra = "0.33.2"
 ordered-float = "5.0.0"
+parquet = "54.2.1"
+regex = "1.11.1"
+reqwest = { version = "0.12", features = ["json"], default-features = false }
+serde = { version = "1.0", features = ["derive"] }
+smallvec = "1.14.0"
+thiserror = "2.0.12"
+tokio = { version = "1", features = ["full"] }
+ureq = "3.0.10"
 
 [dev-dependencies]
 criterion = "0.5.1"
@@ -32,3 +31,6 @@ harness = false
 
 [profile.release]
 debug = true
+
+[profile.dev.package."*"]
+debug = false
