--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ ahash = { version = "0.8.11", default-features = false }
 arrow = { version = "54.3.0", default-features = false }
 camino = { version = "1.1.9", default-features = false }
 csv = { version = "1.3.1", default-features = false }
-hifitime = { version = "4.0.2", features = ["ut1"], default-features = false }
+hifitime = { version = "4.0.2", default-features = false, features = ["ut1"] }
 itertools = { version = "0.14.0", default-features = false, features = [
     "use_std",
 ] }
