--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ ahash = { version = "0.8.11", default-features = false }
 arrow-array = { version = "54.3.1", default-features = false }
 camino = { version = "1.1.9", default-features = false }
 csv = { version = "1.3.1", default-features = false }
+directories = "6.0.0"
 hifitime = { version = "4.0.2", default-features = false, features = ["ut1"] }
 itertools = { version = "0.14.0", default-features = false, features = [
     "use_std",
@@ -27,9 +28,21 @@ serde = { version = "1.0", features = ["derive"], default-features = false }
 smallvec = { version = "1.14.0", default-features = false }
 thiserror = { version = "2.0.12", default-features = false }
 ureq = { version = "3.0.10", default-features = false, features = ["rustls"] }
+reqwest = { version = "0.12.15", default-features = false, optional = true, features = [
+    "stream",
+] }
+tokio = { version = "1.44.1", default-features = false, optional = true, features = [
+    "fs",
+    "rt",
+    "rt-multi-thread",
+] }
+tokio-stream = { version = "0.1.17", default-features = false, optional = true }
 
 [dev-dependencies]
 criterion = { version = "0.5.1", default-features = false }
+
+[features]
+jpl-download = ["dep:reqwest", "dep:tokio", "dep:tokio-stream"]
 
 [[bench]]
 name = "load_parquet"
