--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ tokio = { version = "1.44.1", default-features = false, optional = true, feature
     "rt-multi-thread",
 ] }
 tokio-stream = { version = "0.1.17", default-features = false, optional = true }
+nom = { version = "8.0.0" }
 
 [dev-dependencies]
 criterion = { version = "0.5.1", default-features = false }
