--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ arrow-array = { version = "54.3.1", default-features = false }
 camino = { version = "1.1.9", default-features = false }
 csv = { version = "1.3.1", default-features = false }
 directories = "6.0.0"
-hifitime = { version = "4.0.2", default-features = false, features = ["ut1"] }
+hifitime = { version = "4.0.2", default-features = false, features = ["ut1", "std"] }
 itertools = { version = "0.14.0", default-features = false, features = [
     "use_std",
 ] }
