--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ tokio = { version = "1.44.1", default-features = false, optional = true, feature
 ] }
 tokio-stream = { version = "0.1.17", default-features = false, optional = true }
 nom = { version = "8.0.0" }
+once_cell = "1.21.3"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", default-features = false }
