--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,10 @@ arrow-array = { version = "54.3.1", default-features = false }
 camino = { version = "1.1.9", default-features = false }
 csv = { version = "1.3.1", default-features = false }
 directories = "6.0.0"
-hifitime = { version = "4.0.2", default-features = false, features = ["ut1", "std"] }
+hifitime = { version = "4.0.2", default-features = false, features = [
+    "ut1",
+    "std",
+] }
 itertools = { version = "0.14.0", default-features = false, features = [
     "use_std",
 ] }
@@ -38,10 +41,11 @@ tokio = { version = "1.44.1", default-features = false, optional = true, feature
 ] }
 tokio-stream = { version = "0.1.17", default-features = false, optional = true }
 nom = { version = "8.0.0" }
-once_cell = {version = "1.21.3", default-features = false}
+once_cell = { version = "1.21.3", default-features = false }
 roots = { version = "0.0.8", default-features = false }
 
 [dev-dependencies]
+approx = { version = "0.5.1", default-features = false }
 criterion = { version = "0.5.1", default-features = false }
 
 [features]
