--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,12 @@ serde = { version = "1.0", features = ["derive"], default-features = false }
 smallvec = { version = "1.14.0", default-features = false }
 thiserror = { version = "2.0.12", default-features = false }
 ureq = { version = "3.0.10", default-features = false, features = ["rustls"] }
+nom = { version = "8.0.0" }
+once_cell = { version = "1.21.3", default-features = false }
+roots = { version = "0.0.8", default-features = false }
+rand = { version = "0.9.2", default-features = false, features = ["std_rng"] }
+rand_distr = { version = "0.5.1", default-features = false }
+
 reqwest = { version = "0.12.15", default-features = false, optional = true, features = [
     "stream",
 ] }
@@ -40,9 +46,6 @@ tokio = { version = "1.44.1", default-features = false, optional = true, feature
     "rt-multi-thread",
 ] }
 tokio-stream = { version = "0.1.17", default-features = false, optional = true }
-nom = { version = "8.0.0" }
-once_cell = { version = "1.21.3", default-features = false }
-roots = { version = "0.0.8", default-features = false }
 
 [dev-dependencies]
 approx = { version = "0.5.1", default-features = false }
