add interstellar object observation in gitignore, should remove later

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ run_perf.sh
 rust_side.txt
 tests/data/asteroid_dataset.parquet
 tests/data/mega_test.parquet
+tests/data/1I_Oumuamua.obs
+tests/data/2I_Borisov.obs
+tests/data/3I_Atlas.obs
