--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ arrow-array = { version = "54.3.1", default-features = false }
 camino = { version = "1.1.9", default-features = false }
 csv = { version = "1.3.1", default-features = false }
 directories = "6.0.0"
-hifitime = { version = "4.0.2", default-features = false, features = [
+hifitime = { version = "4.1.3", default-features = false, features = [
     "ut1",
     "std",
 ] }
@@ -44,12 +44,13 @@ tokio = { version = "1.44.1", default-features = false, optional = true, feature
     "fs",
     "rt",
     "rt-multi-thread",
+    "io-util"
 ] }
 tokio-stream = { version = "0.1.17", default-features = false, optional = true }
 
 [dev-dependencies]
 approx = { version = "0.5.1", default-features = false }
-criterion = { version = "0.5.1", default-features = false }
+criterion = { version = "0.5.1", features = ["html_reports"] }
 husky-rs = "0.1.5"
 proptest = "1.7.0"
 
@@ -60,12 +61,24 @@ jpl-download = ["dep:reqwest", "dep:tokio", "dep:tokio-stream"]
 name = "load_parquet"
 harness = false
 
-[profile.release]
+[[bench]]
+name = "outfit_gauss_iod"
+harness = false
+
+[profile.bench]
+opt-level = 3
+lto = "thin"
+codegen-units = 1
 debug = true
 
-[profile.dev.package."*"]
-debug = false
+[profile.release]
+debug = true
+lto = "thin"
+codegen-units = 1
 
 [package.metadata.docs.rs]
 features = ["jpl-download"]
 rustdoc-args = ["--cfg", "docsrs"]
+
+[patch.crates-io]
+hifitime = { path = "../hifitime" }
