--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,6 +65,10 @@ harness = false
 name = "outfit_gauss_iod"
 harness = false
 
+[[bench]]
+name = "solve_kepler_equation"
+harness = false
+
 [profile.bench]
 opt-level = 3
 lto = "thin"
