gauss method now scan every roots find by the 8 polynom solver, refactor, improve perf of gauss method

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,6 +69,10 @@ harness = false
 name = "solve_kepler_equation"
 harness = false
 
+[[bench]]
+name = "gauss_prelim_orbit"
+harness = false
+
 [profile.bench]
 opt-level = 3
 lto = "thin"
