--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,12 @@ ahash = { version = "0.8.11", default-features = false }
 arrow-array = { version = "54.3.1", default-features = false }
 camino = { version = "1.1.9", default-features = false }
 directories = "6.0.0"
-hifitime = { version = "4.1.3", default-features = false, features = [
+
+hifitime = { git = "https://github.com/nyx-space/hifitime", rev = "aa4e5aed52ffaa4bb8be3901e04625e353788d4d", default-features = false, features = [
     "ut1",
     "std",
 ] }
+
 itertools = { version = "0.14.0", default-features = false, features = [
     "use_std",
 ] }
@@ -42,12 +44,15 @@ tokio = { version = "1.44.1", default-features = false, optional = true, feature
     "fs",
     "rt",
     "rt-multi-thread",
-    "io-util"
+    "io-util",
 ] }
 tokio-stream = { version = "0.1.17", default-features = false, optional = true }
 
 [dev-dependencies]
-approx = { version = "0.5.1", default-features = false }
+approx = { version = "0.5.1", default-features = false } # hifitime = { version = "4.1.3", default-features = false, features = [
+#     "ut1",
+#     "std",
+# ] }
 criterion = { version = "0.5.1", features = ["html_reports"] }
 husky-rs = "0.1.5"
 proptest = "1.7.0"
@@ -85,6 +90,3 @@ codegen-units = 1
 [package.metadata.docs.rs]
 features = ["jpl-download"]
 rustdoc-args = ["--cfg", "docsrs"]
-
-[patch.crates-io]
-hifitime = { path = "../hifitime" }
