fix parquet reader by converting the ra/dec from degree to radians for gauss IOD, add a new progress bar feature for the full fit of a trajectory set, add a complete example from parquet loading to IOD fit and summarize

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ tokio = { version = "1.44.1", default-features = false, optional = true, feature
     "io-util",
 ] }
 tokio-stream = { version = "0.1.17", default-features = false, optional = true }
+indicatif = { version = "0.18", optional = true }
 
 [dev-dependencies]
 approx = { version = "0.5.1", default-features = false }
@@ -62,6 +63,7 @@ proptest = "1.7.0"
 
 [features]
 jpl-download = ["dep:reqwest", "dep:tokio", "dep:tokio-stream"]
+progress = ["dep:indicatif"]
 
 [[test]]
 name = "reader_80col_test"
