--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,15 @@
 name = "outfit"
 version = "1.0.0"
 edition = "2021"
+license = "CeCILL-C"
+description = "Orbit determination toolkit in Rust. Provides astrometric parsing, observer management, and initial orbit determination (Gauss method) with JPL ephemeris support."
+readme = "README.md"
+repository = "https://github.com/FusRoman/Outfit"
+homepage = "https://github.com/FusRoman/Outfit"
+documentation = "https://docs.rs/outfit"
+keywords = ["astronomy", "orbit-determination", "asteroid", "ephemeris", "astrometry"]
+categories = ["science", "science::astronomy", "parsing", "data-structures"]
+authors = ["Roman Le Montagner <roman.lemontagner@gmail.com>"]
 
 [dependencies]
 aberth = { version = "0.4.1", default-features = false }
