--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ homepage = "https://github.com/FusRoman/Outfit"
 documentation = "https://docs.rs/outfit"
 keywords = ["astronomy", "orbit-determination", "asteroid", "ephemeris", "astrometry"]
 categories = ["science", "science::astronomy", "parsing", "data-structures"]
-authors = ["Roman Le Montagner <roman.lemontagner@gmail.com>"]
+authors = ["Roman Le Montagner <roman.le-montagner@ijclab.in2p3.fr>"]
 
 [dependencies]
 aberth = { version = "0.4.1", default-features = false }
