--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,16 +19,10 @@ ahash = { version = "0.8.11", default-features = false }
 arrow-array = { version = "54.3.1", default-features = false }
 camino = { version = "1.1.9", default-features = false }
 directories = "6.0.0"
-
-# hifitime = { version = "4.1.3", default-features = false, features = [
-#     "ut1",
-#     "std",
-# ] }
-hifitime = { git = "https://github.com/nyx-space/hifitime", rev = "aa4e5aed52ffaa4bb8be3901e04625e353788d4d", default-features = false, features = [
+hifitime = { version = "4.2.0", default-features = false, features = [
     "ut1",
     "std",
 ] }
-
 itertools = { version = "0.14.0", default-features = false, features = [
     "use_std",
 ] }
