--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/FusRoman/Outfit"
 homepage = "https://github.com/FusRoman/Outfit"
 documentation = "https://docs.rs/outfit"
 keywords = ["astronomy", "orbit-determination", "asteroid", "ephemeris", "astrometry"]
-categories = ["science", "science::astronomy", "parsing", "data-structures"]
+categories = ["science", "parsing", "data-structures"]
 authors = ["Roman Le Montagner <roman.le-montagner@ijclab.in2p3.fr>"]
 
 [dependencies]
