--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ ureq = { version = "3.0.10", default-features = false, features = ["rustls"] }
 nom = { version = "8.0.0" }
 once_cell = { version = "1.21.3", default-features = false }
 roots = { version = "0.0.8", default-features = false }
-rand = { version = "0.9.2", default-features = false, features = ["std_rng"] }
+rand = { version = "0.9.2", default-features = false, features = ["std_rng", "os_rng"] }
 rand_distr = { version = "0.5.1", default-features = false }
 
 reqwest = { version = "0.12.15", default-features = false, optional = true, features = [
