--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,13 @@ readme = "README.md"
 repository = "https://github.com/FusRoman/Outfit"
 homepage = "https://github.com/FusRoman/Outfit"
 documentation = "https://docs.rs/outfit"
-keywords = ["astronomy", "orbit-determination", "asteroid", "ephemeris", "astrometry"]
+keywords = [
+    "astronomy",
+    "orbit-determination",
+    "asteroid",
+    "ephemeris",
+    "astrometry",
+]
 categories = ["science", "parsing", "data-structures"]
 authors = ["Roman Le Montagner <roman.le-montagner@ijclab.in2p3.fr>"]
 
@@ -42,7 +48,10 @@ ureq = { version = "3.0.10", default-features = false, features = ["rustls"] }
 nom = { version = "8.0.0" }
 once_cell = { version = "1.21.3", default-features = false }
 roots = { version = "0.0.8", default-features = false }
-rand = { version = "0.9.2", default-features = false, features = ["std_rng", "os_rng"] }
+rand = { version = "0.9.2", default-features = false, features = [
+    "std_rng",
+    "os_rng",
+] }
 rand_distr = { version = "0.5.1", default-features = false }
 
 reqwest = { version = "0.12.15", default-features = false, optional = true, features = [
@@ -57,7 +66,8 @@ tokio = { version = "1.44.1", default-features = false, optional = true, feature
     "io-util",
 ] }
 tokio-stream = { version = "0.1.17", default-features = false, optional = true }
-indicatif = { version = "0.18", optional = true }
+indicatif = { version = "0.18", optional = true, default-features = false }
+rayon = { version = "1.11.0", optional = true, default-features = false }
 
 [dev-dependencies]
 approx = { version = "0.5.1", default-features = false }
@@ -68,6 +78,7 @@ proptest = "1.7.0"
 [features]
 jpl-download = ["dep:reqwest", "dep:tokio", "dep:tokio-stream"]
 progress = ["dep:indicatif"]
+parallel = ["dep:rayon"]
 
 [[test]]
 name = "reader_80col_test"
