--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,7 @@ tokio = { version = "1.44.1", default-features = false, optional = true, feature
 tokio-stream = { version = "0.1.17", default-features = false, optional = true }
 indicatif = { version = "0.18", optional = true, default-features = false }
 rayon = { version = "1.11.0", optional = true, default-features = false }
+comfy-table = { version = "7.1.4", default-features = false }
 
 [dev-dependencies]
 approx = { version = "0.5.1", default-features = false }
